--- a/package.json
+++ b/package.json
@@ -4,17 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch server.ts"
+    "dev": "node --env-file .env --watch server.ts",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:studio": "drizzle-kit studio"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "drizzle-orm": "^0.44.4",
     "fastify": "^5.5.0",
-    "pino-pretty": "^13.1.1"
+    "fastify-type-provider-zod": "^5.0.3",
+    "pg": "^8.16.3",
+    "pino-pretty": "^13.1.1",
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
+    "drizzle-kit": "^0.31.4",
     "typescript": "^5.9.2"
   }
 }
