--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL = 'postgresql://postgres:postgres@localhost:5432/desafio'
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/desafio"
