--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --env-file .env --watch server.ts",
-    "db:seeds": "",
+    "db:seed": "node --env-file .env src/database/seed.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio"
@@ -23,6 +23,7 @@
     "fastify-type-provider-zod": "^5.0.3",
     "pg": "^8.16.3",
     "pino-pretty": "^13.1.1",
+    "vitest": "^3.2.4",
     "zod": "^4.0.17"
   },
   "devDependencies": {
