--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   },
   "devDependencies": {
     "@types/node": "^24.2.1",
+    "@types/supertest": "^6.0.3",
     "drizzle-kit": "^0.31.4",
+    "supertest": "^7.1.4",
     "typescript": "^5.9.2"
   }
 }
