--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "fastify-type-provider-zod": "^5.0.3",
     "pg": "^8.16.3",
     "pino-pretty": "^13.1.1",
-    "vitest": "^3.2.4",
     "zod": "^4.0.17"
   },
   "devDependencies": {
@@ -32,6 +31,7 @@
     "@types/supertest": "^6.0.3",
     "drizzle-kit": "^0.31.4",
     "supertest": "^7.1.4",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.2",
+    "vitest": "^3.2.4"
   }
 }
