--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "test": "vitest run"
+    "pretest": "dotenv -e .env.test drizzle-kit migrate",
+    "test": "dotenv -e .env.test vitest run"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +30,7 @@
     "@faker-js/faker": "^9.9.0",
     "@types/node": "^24.2.1",
     "@types/supertest": "^6.0.3",
+    "dotenv-cli": "^10.0.0",
     "drizzle-kit": "^0.31.4",
     "supertest": "^7.1.4",
     "typescript": "^5.9.2",
